Adding GangWeapons costs a Gang money. Adding and removing GangerWeapons pulls from or pushes to gang's stash.
