# Hivemind.Ng/dev/swagger.json
@@ -200,20 +200,15 @@
             }
           }
         }
-      },
+      }
+    },
+    "/api/gangers/{gangerId}/weapons/{gangWeaponId}": {
       "post": {
         "tags": [
           "Gangers"
         ],
         "operationId": "Gangers_AddGangerWeapon",
-        "consumes": [
-          "application/json",
-          "text/json",
-          "text/html",
-          "application/xml",
-          "text/xml",
-          "application/x-www-form-urlencoded"
-        ],
+        "consumes": [],
         "produces": [
           "application/json",
           "text/json",
@@ -229,12 +224,10 @@
             "type": "string"
           },
           {
-            "name": "weapon",
-            "in": "body",
+            "name": "gangWeaponId",
+            "in": "path",
             "required": true,
-            "schema": {
-              "$ref": "#/definitions/Weapon"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -491,11 +484,11 @@
             "type": "string"
           },
           {
-            "name": "weapon",
+            "name": "gangWeapon",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Weapon"
+              "$ref": "#/definitions/GangWeapon"
             }
           }
         ],
@@ -505,35 +498,6 @@
             "schema": {
               "$ref": "#/definitions/GangWeapon"
             }
-          }
-        }
-      }
-    },
-    "/api/gangs/{gangId}/weapons/{gangWeaponId}": {
-      "delete": {
-        "tags": [
-          "Gangs"
-        ],
-        "operationId": "Gangs_RemoveGangWeapon",
-        "consumes": [],
-        "produces": [],
-        "parameters": [
-          {
-            "name": "gangId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "gangWeaponId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
           }
         }
       }
@@ -1008,7 +972,7 @@
         "weapons": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Weapon"
+            "$ref": "#/definitions/GangerWeapon"
           }
         },
         "isEnabled": {
@@ -1120,7 +1084,7 @@
     "Injury": {
       "type": "object",
       "properties": {
-        "injuryEnum": {
+        "injuryId": {
           "enum": [
             "Dead",
             "MultipleInjuries",
@@ -1154,96 +1118,114 @@
         }
       }
     },
+    "GangerWeapon": {
+      "type": "object",
+      "properties": {
+        "gangerWeaponId": {
+          "type": "string"
+        },
+        "gangerId": {
+          "type": "string"
+        },
+        "weapon": {
+          "$ref": "#/definitions/Weapon"
+        },
+        "cost": {
+          "format": "int32",
+          "type": "integer"
+        }
+      }
+    },
     "Weapon": {
       "type": "object",
       "properties": {
-        "weaponEnum": {
+        "weaponId": {
           "enum": [
-            "MASSIVE_AXE",
-            "CLUB",
-            "CHAINS",
-            "CHAINSWORD",
-            "SWORD",
-            "POWER_SWORD",
-            "POWER_AXE_ONE_HANDED",
-            "POWER_AXE_TWO_HANDED",
-            "POWER_FIST",
-            "POWER_MAUL",
-            "AUTOPISTOL",
-            "BOLT_PISTOL",
-            "LASPISTOL",
-            "NEEDLE_PISTOL",
-            "PLASMA_PISTOL_LOW_POWER",
-            "PLASMA_PISTOL_HIGH_POWER",
-            "STUB_GUN",
-            "WEB_PISTOL",
-            "HAND_FLAMER",
-            "AUTOGUN",
-            "BOLTGUN",
-            "LASGUN",
-            "SHOTGUN_SOLID_SLUG",
-            "SHOTGUN_SCATTER_SHOT",
-            "SHOTGUN_MAN_STOPPER",
-            "SHOTGUN_HOT_SHOT",
-            "SHOTGUN_BOLT",
-            "FLAMER",
-            "GRENADE_LAUNCHER",
-            "MELTA_GUN",
-            "NEEDLE_RIFLE",
-            "PLASMA_GUN_LOW_ENERGY",
-            "PLASMA_GUN_HIGH_ENERGY",
-            "AUTOCANNON",
-            "HEAVY_BOLTER",
-            "HEAVY_PLASMA_GUN_LOW_ENERGY",
-            "HEAVY_PLASMA_GUN_HIGH_ENERGY",
-            "HEAVY_STUBBER",
-            "LASCANNON",
-            "MISSILE_LAUNCHER_KRAK_MISSILE",
-            "MISSILE_LAUNCHER_FRAG_MISSILE",
-            "KRAK_GRENADE",
-            "FRAG_GRENADE",
-            "MELTA_BOMB",
-            "CHOKE_GAS_GRENADE",
-            "HALLUCINOGEN_GAS_GRENADE",
-            "SCARE_GAS_GRENADE",
-            "PLASMA_GRENADE",
-            "PHOTON_FLASH_FLARE",
-            "SMOKE_GRENADE",
-            "CARAPACE_ARMOR",
-            "FLAK_ARMOR",
-            "MESH_ARMOR",
-            "HOTSHOT_LASER_POWER_PACK",
-            "INFRA_RED_SIGHT",
-            "MONO_SIGHT",
-            "RED_DOT_LASER_SIGHT",
-            "TELESCOPIC_SIGHT",
-            "BIONIC_EYE",
-            "BIONIC_LEG",
-            "BIONIC_ARM",
-            "AUTO_REPAIRER",
-            "BIO_BOOSTER",
-            "BIO_SCANNER",
-            "BLINDSNAKE_POUCH",
-            "CLIP_HARNESS",
-            "CONCEALED_BLADE",
-            "FILTER_PLUGS",
-            "GRAV_CHUTE",
-            "GRAPNEL",
-            "INFRA_RED_GOGGLES",
-            "ISOTROPIC_FUEL_ROD",
-            "LOBO_CHIP",
-            "MUNG_VASE",
-            "MEDI_PACK",
-            "ONE_IN_A_MILLION_WEAPON",
-            "PHOTO_CONTACTS",
-            "PHOTO_VISOR",
-            "SILENCER",
-            "SKULL_CHIP",
-            "RATSKIN_MAP",
-            "RESPIRATOR",
-            "SCREAMERS",
-            "STUMMERS",
-            "WEAPON_RELOADS"
+            "MassiveAxe",
+            "Club",
+            "Chains",
+            "Chainsword",
+            "Sword",
+            "PowerSword",
+            "PowerAxeOneHanded",
+            "PowerAxeTwoHanded",
+            "PowerFist",
+            "PowerMaul",
+            "Autopistol",
+            "BoltPistol",
+            "Laspistol",
+            "NeedlePistol",
+            "PlasmaPistolLowPower",
+            "PlasmaPistolHighPower",
+            "StubGun",
+            "WebPistol",
+            "HandFlamer",
+            "Autogun",
+            "Boltgun",
+            "Lasgun",
+            "ShotgunSolidSlug",
+            "ShotgunScatterShot",
+            "ShotgunManStopper",
+            "ShotgunHotShot",
+            "ShotgunBolt",
+            "Flamer",
+            "GrenadeLauncher",
+            "MeltaGun",
+            "NeedleRifle",
+            "PlasmaGunLowEnergy",
+            "PlasmaGunHighEnergy",
+            "Autocannon",
+            "HeavyBolter",
+            "HeavyPlasmaGunLowEnergy",
+            "HeavyPlamsaGunHighEnergy",
+            "HeavyStubber",
+            "Lascannon",
+            "MissileLauncherKrakMissile",
+            "MissileLauncherFragMissile",
+            "KrakGrenade",
+            "FragGrenade",
+            "MeltaBomb",
+            "ChokeGasGrenade",
+            "HallucinogenGasGrenade",
+            "ScareGasGrenade",
+            "PlasmaGrenade",
+            "PhotonFlashFlare",
+            "SmokeGrenade",
+            "CarapaceArmor",
+            "FlakArmor",
+            "MeshArmor",
+            "HotshotLaserPowerPack",
+            "InfraRedSight",
+            "MonoSight",
+            "RedDotLaserSight",
+            "TelescopicSight",
+            "BionicEye",
+            "BionicLeg",
+            "BionicArm",
+            "AutoRepairer",
+            "BioBooster",
+            "BioScanner",
+            "BlindsnakePouch",
+            "ClipHarness",
+            "ConcealedBlade",
+            "FilterPlugs",
+            "GravChute",
+            "Grapnel",
+            "InfraRedGoggles",
+            "IsotropicFuelRod",
+            "LoboChip",
+            "MungVase",
+            "MediPack",
+            "OneInAMillionWeapon",
+            "PhotoContacts",
+            "PhotoVisor",
+            "Silencer",
+            "SkullChip",
+            "RatskinMap",
+            "Respirator",
+            "Screamers",
+            "Stummers",
+            "WeaponReloads"
           ],
           "type": "string"
         },
@@ -1252,16 +1234,16 @@
         },
         "weaponType": {
           "enum": [
-            "HAND_TO_HAND",
-            "PISTOLS",
-            "BASIC",
-            "SPECIAL",
-            "HEAVY",
-            "GRENADES",
-            "ARMOUR",
-            "AMMUNITION_AND_GUNSIGHTS",
-            "BIONICS",
-            "MISCELLANEOUS"
+            "HandToHand",
+            "Pistols",
+            "Basic",
+            "Special",
+            "Heavy",
+            "Grenades",
+            "Armour",
+            "AmmunitionAndGunsights",
+            "Bionics",
+            "Miscellaneous"
           ],
           "type": "string"
         },
@@ -1535,24 +1517,6 @@
         }
       }
     },
-    "GangerWeapon": {
-      "type": "object",
-      "properties": {
-        "gangerWeaponId": {
-          "type": "string"
-        },
-        "gangerId": {
-          "type": "string"
-        },
-        "weapon": {
-          "$ref": "#/definitions/Weapon"
-        },
-        "cost": {
-          "format": "int32",
-          "type": "integer"
-        }
-      }
-    },
     "GangWeapon": {
       "type": "object",
       "properties": {
@@ -1564,6 +1528,10 @@
         },
         "weapon": {
           "$ref": "#/definitions/Weapon"
+        },
+        "cost": {
+          "format": "int32",
+          "type": "integer"
         }
       }
     },
