# Hivemind.Ng/src/autogenerated/entities/injuryId.ts
@@ -1,0 +1,24 @@
+/*
+ * This file is autogenerated. Please see README.md for instructions on editing.
+ */
+
+export enum injuryId {
+    Dead = 1,
+    MultipleInjuries,
+    ChestWound,
+    LegWound,
+    ArmWound,
+    HeadWound,
+    BlindedInOneEye,
+    PartiallyDeafened,
+    ShellShock,
+    HandInjury,
+    OldBattleWound,
+    FullRecovery,
+    BitterEnmity,
+    Captured,
+    HorribleScars,
+    ImpressiveScars,
+    SurvivesAgainstTheOdds,
+    SporeSickness,
+}
