# Hivemind.Ng/src/autogenerated/entities/weaponId.ts
@@ -1,0 +1,91 @@
+/*
+ * This file is autogenerated. Please see README.md for instructions on editing.
+ */
+
+export enum weaponId {
+    MassiveAxe = 1,
+    Club,
+    Chains,
+    Chainsword,
+    Sword,
+    PowerSword,
+    PowerAxeOneHanded,
+    PowerAxeTwoHanded,
+    PowerFist,
+    PowerMaul,
+    Autopistol,
+    BoltPistol,
+    Laspistol,
+    NeedlePistol,
+    PlasmaPistolLowPower,
+    PlasmaPistolHighPower,
+    StubGun,
+    WebPistol,
+    HandFlamer,
+    Autogun,
+    Boltgun,
+    Lasgun,
+    ShotgunSolidSlug,
+    ShotgunScatterShot,
+    ShotgunManStopper,
+    ShotgunHotShot,
+    ShotgunBolt,
+    Flamer,
+    GrenadeLauncher,
+    MeltaGun,
+    NeedleRifle,
+    PlasmaGunLowEnergy,
+    PlasmaGunHighEnergy,
+    Autocannon,
+    HeavyBolter,
+    HeavyPlasmaGunLowEnergy,
+    HeavyPlamsaGunHighEnergy,
+    HeavyStubber,
+    Lascannon,
+    MissileLauncherKrakMissile,
+    MissileLauncherFragMissile,
+    KrakGrenade,
+    FragGrenade,
+    MeltaBomb,
+    ChokeGasGrenade,
+    HallucinogenGasGrenade,
+    ScareGasGrenade,
+    PlasmaGrenade,
+    PhotonFlashFlare,
+    SmokeGrenade,
+    CarapaceArmor,
+    FlakArmor,
+    MeshArmor,
+    HotshotLaserPowerPack,
+    InfraRedSight,
+    MonoSight,
+    RedDotLaserSight,
+    TelescopicSight,
+    BionicEye,
+    BionicLeg,
+    BionicArm,
+    AutoRepairer,
+    BioBooster,
+    BioScanner,
+    BlindsnakePouch,
+    ClipHarness,
+    ConcealedBlade,
+    FilterPlugs,
+    GravChute,
+    Grapnel,
+    InfraRedGoggles,
+    IsotropicFuelRod,
+    LoboChip,
+    MungVase,
+    MediPack,
+    OneInAMillionWeapon,
+    PhotoContacts,
+    PhotoVisor,
+    Silencer,
+    SkullChip,
+    RatskinMap,
+    Respirator,
+    Screamers,
+    Stummers,
+    WeaponReloads,
+}
