# WebApi/Controllers/GangersController.cs
@@ -1,34 +1,57 @@
-﻿using Hivemind.Entities;
-using Hivemind.Managers;
+﻿// <copyright file="GangersController.cs" company="weirdvector">
+// Copyright (c) weirdvector. All rights reserved.
+// </copyright>
+
 using System;
 using System.Collections.Generic;
-using System.Linq;
-using System.Net;
-using System.Net.Http;
 using System.Web.Http;
+using Hivemind.Entities;
+using Hivemind.Managers;
 
 namespace WebApi.Controllers
 {
+    /// <summary>
+    /// Gangers Controller
+    /// </summary>
     [RoutePrefix("api/gangers")]
     public class GangersController : ApiController
     {
+        /// <summary>
+        /// Ganger manager
+        /// </summary>
         private IGangerManager _gangerManager;
-        private IWeaponManager _weaponFactory;
 
+        /// <summary>
+        /// Weapon manager
+        /// </summary>
+        private IWeaponManager _weaponManager;
+
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GangersController"/> class.
+        /// </summary>
+        /// <param name="gangerManager">Ganger Manager</param>
+        /// <param name="weaponManager">Weapon Manager</param>
         public GangersController(IGangerManager gangerManager, IWeaponManager weaponManager)
         {
             if (gangerManager == null)
             {
                 throw new ArgumentNullException(nameof(gangerManager));
             }
+
             if (weaponManager == null)
             {
                 throw new ArgumentNullException(nameof(weaponManager));
             }
+
             _gangerManager = gangerManager;
-            _weaponFactory = weaponManager;
+            _weaponManager = weaponManager;
         }
 
+        /// <summary>
+        /// Add ganger
+        /// </summary>
+        /// <param name="ganger">Ganger to add</param>
+        /// <returns>Added ganger</returns>
         [Authorize]
         [HttpPost]
         public Ganger AddGanger(Ganger ganger)
@@ -37,6 +60,11 @@ namespace WebApi.Controllers
             return _gangerManager.AddGanger(ganger);
         }
 
+        /// <summary>
+        /// Get a ganger
+        /// </summary>
+        /// <param name="gangerId">Ganger ID</param>
+        /// <returns>Ganger</returns>
         [Authorize]
         [HttpGet]
         [Route("{gangerId}")]
@@ -45,6 +73,11 @@ namespace WebApi.Controllers
             return _gangerManager.GetGanger(gangerId);
         }
 
+        /// <summary>
+        /// Update a ganger
+        /// </summary>
+        /// <param name="ganger">Ganger to update</param>
+        /// <returns>Updated ganger</returns>
         [Authorize]
         [HttpPut]
         public Ganger UpdateGanger(Ganger ganger)
@@ -52,34 +85,48 @@ namespace WebApi.Controllers
             return _gangerManager.UpdateGanger(ganger);
         }
 
-        // weapon routes
+        #region weapon routes
+
+        /// <summary>
+        /// Get ganger's weapons
+        /// </summary>
+        /// <param name="gangerId">Ganger ID</param>
+        /// <returns>Ganger's weapons</returns>
         [Authorize]
         [HttpGet]
         [Route("{gangerId}/weapons")]
         public IEnumerable<GangerWeapon> GetWeapons([FromUri] string gangerId)
         {
-            return _weaponFactory.GetGangerWeapons(gangerId);
+            return _weaponManager.GetGangerWeapons(gangerId);
         }
 
+        /// <summary>
+        /// Add ganger weapon. Gangers are equipped weapons from the stash, so we provide the gangWeapon ID in the request.
+        /// </summary>
+        /// <param name="gangerId">Ganger ID</param>
+        /// <param name="gangWeaponId">GangWeapon ID</param>
+        /// <returns>Ganger Weapon</returns>
         [Authorize]
         [HttpPost]
-        [Route("{gangerId}/weapons")]
-        public GangerWeapon AddGangerWeapon([FromUri] string gangerId, Weapon weapon)
+        [Route("{gangerId}/weapons/{gangWeaponId}")]
+        public GangerWeapon AddGangerWeapon([FromUri] string gangerId, [FromUri] string gangWeaponId)
         {
-            var gangerWeapon = new GangerWeapon()
-            {
-                Weapon = weapon,
-                GangerId = gangerId
-            };
-            return _weaponFactory.AddGangerWeapon(gangerWeapon);
+            return _weaponManager.AddGangerWeapon(gangerId, gangWeaponId);
         }
 
+        /// <summary>
+        /// Remove ganger weapon (return to stash)
+        /// </summary>
+        /// <param name="gangerId">Ganger ID</param>
+        /// <param name="gangerWeaponId">Ganger Weapon ID</param>
         [Authorize]
         [HttpDelete]
         [Route("{gangerId}/weapons/{gangerWeaponId}")]
-        public void RemoveGangerWeapon([FromUri] string gangerId, string gangerWeaponId)
+        public void RemoveGangerWeapon([FromUri] string gangerId, [FromUri] string gangerWeaponId)
         {
-            _weaponFactory.RemoveGangerWeapon(gangerWeaponId);
+            _weaponManager.RemoveGangerWeapon(gangerId, gangerWeaponId);
         }
+
+        #endregion
     }
 }
