# WebApi/Controllers/GangsController.cs
@@ -1,36 +1,60 @@
-﻿using Hivemind.Entities;
-using Hivemind.Enums;
-using Hivemind.Exceptions;
-using Hivemind.Managers;
+﻿// <copyright file="GangsController.cs" company="weirdvector">
+// Copyright (c) weirdvector. All rights reserved.
+// </copyright>
+
 using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Security.Claims;
 using System.Web.Http;
+using Hivemind.Entities;
+using Hivemind.Exceptions;
+using Hivemind.Managers;
 
 namespace WebApi.Controllers
 {
+    /// <summary>
+    /// GangsController
+    /// </summary>
     [RoutePrefix("api/gangs")]
-    //[EnableCors(origins: "http://localhost:4200", headers:"*", methods: "*")]
     public class GangsController : ApiController
     {
+        /// <summary>
+        /// Gang Manager
+        /// </summary>
         private IGangManager _gangManager;
+
+        /// <summary>
+        /// Weapon Manager
+        /// </summary>
         private IWeaponManager _weaponManager;
 
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GangsController"/> class.
+        /// </summary>
+        /// <param name="gangManager">Gang Manager</param>
+        /// <param name="weaponManager">Weapon Manager</param>
         public GangsController(IGangManager gangManager, IWeaponManager weaponManager)
         {
             if (gangManager == null)
             {
                 throw new ArgumentNullException(nameof(gangManager));
             }
+
             if (weaponManager == null)
             {
                 throw new ArgumentNullException(nameof(weaponManager));
             }
+
             _gangManager = gangManager;
             _weaponManager = weaponManager;
         }
 
+        /// <summary>
+        /// Gets a gang by ID
+        /// </summary>
+        /// <param name="gangId">Gang ID</param>
+        /// <returns>Gang</returns>
         [Authorize]
         [HttpGet]
         [Route("{gangId}")]
@@ -39,6 +63,11 @@ namespace WebApi.Controllers
             return _gangManager.GetGang(gangId);
         }
 
+        /// <summary>
+        /// Add a new gang
+        /// </summary>
+        /// <param name="gang">Gang to be added</param>
+        /// <returns>Added gang</returns>
         [Authorize]
         [HttpPost]
         [Route("")]
@@ -52,7 +81,7 @@ namespace WebApi.Controllers
             {
                 throw new HivemindException("User does not have a user ID");
             }
-            
+
             var gangEntity = _gangManager.AddGang(gang);
 
             _gangManager.AssociateGangToUser(gang.GangId, userId.Value);
@@ -60,6 +89,11 @@ namespace WebApi.Controllers
             return gangEntity;
         }
 
+        /// <summary>
+        /// Update a gang
+        /// </summary>
+        /// <param name="gang">Gang to update</param>
+        /// <returns>Updated gang</returns>
         [Authorize]
         [HttpPut]
         public Gang UpdateGang(Gang gang)
@@ -69,45 +103,44 @@ namespace WebApi.Controllers
         }
 
         #region weapon routes
+
         /// <summary>
         /// Gets the gang's stash of weapons (unequipped to a ganger).
         /// </summary>
-        /// <param name="gangId"></param>
-        /// <returns></returns>
+        /// <param name="gangId">Gang ID</param>
+        /// <returns>List of gang's weapons.</returns>
         [Authorize]
         [HttpGet]
         [Route("{gangId}/weapons")]
         public IEnumerable<Weapon> GetGangStash([FromUri] string gangId)
         {
-            return _weaponManager.GetGangStash(gangId);
+            return _weaponManager.GetGangStash(gangId).Select(gw => gw.Weapon);
         }
 
+        /// <summary>
+        /// Buy a new gang weapon (add to stash).
+        /// </summary>
+        /// <param name="gangId">Gang Id</param>
+        /// <param name="gangWeapon">GangWeapon</param>
+        /// <returns>The added GangWeapon</returns>
         [Authorize]
         [HttpPost]
         [Route("{gangId}/weapons")]
-        public GangWeapon AddGangWeapon([FromUri] string gangId, Weapon weapon)
+        public GangWeapon AddGangWeapon([FromUri] string gangId, GangWeapon gangWeapon)
         {
-            var gangWeapon = new GangWeapon()
+            if (!_gangManager.Spend(gangId, gangWeapon.Cost))
             {
-                Weapon = weapon,
-                GangId = gangId
-            };
-            return _weaponManager.AddGangWeapon(gangWeapon);
-        }
+                return null;
+            }
 
-        [Authorize]
-        [HttpDelete]
-        [Route("{gangId}/weapons/{gangWeaponId}")]
-        public void RemoveGangWeapon([FromUri] string gangId, string gangWeaponId)
-        {
-            _weaponManager.RemoveGangWeapon(gangWeaponId);
+            return _weaponManager.AddGangWeapon(gangWeapon);
         }
 
         /// <summary>
         /// Gets all of the weapons for a gang that are equipped to a ganger.
         /// </summary>
-        /// <param name="gangId"></param>
-        /// <returns></returns>
+        /// <param name="gangId">Gang Id</param>
+        /// <returns>Gang's weapons</returns>
         [Authorize]
         [HttpGet]
         [Route("{gangId}/weapons/gangers")]
